<resources>
    <string name="app_name">MyVersity</string>
    <string name="mainMessage">MyVersity</string>

    <string name="asignatura_title_topbar">ASIGNATURAS</string>
    <string name="resumen_title_topbar">RESUMEN</string>
    <string name="configuracion_title_topbar">CONFIGURACIÓN</string>

    <string name="asignatura_title_bottombar">Asignaturas</string>
    <string name="resumen_title_bottombar">Resumen</string>
    <string name="configuracion_title_bottombar">Configuración</string>
    <string name="opcion_1_config">Configuración de notas</string>
    <string name="opcion_2_config">Exportar Asignatura</string>
    <string name="opcion_3_config">Importar Asignatura</string>

    <string name="rango_notas_config_inicial">Rango de notas</string>
    <string name="orientacion_notas_config_inicial">Orientación de notas</string>
    <string name="nota_aprobacion_config_inicial">Nota de aprobación</string>
    <string name="tipo_nota_config_inicial">Tipo de nota</string>
    <string name="guardar_config_inicial">Guardar</string>
    <string name="nota_continua_config_inicial">Continua - Con decimal</string>
    <string name="nota_discreta_config_inicial">Discreta - Sin decimal</string>
    <string name="nota_config_inicial">Nota</string>
    <string name="mayor_a_menor_config_inicial">Mayor a menor</string>
    <string name="menor_a_mayor_config_inicial">Menor a mayor</string>
    <string name="max_nota_config_inicial">Max</string>
    <string name="min_nota_config_inicial">Min</string>
    <string name="sin_asignaturas">NO HAY ASIGNATURAS INGRESADAS!</string>
    <string name="sin_evaluaciones">NO HAY EVALUACIONES INGRESADAS!</string>

    <string name="title_opcion_1_config">CONFIGURACIÓN DE NOTAS</string>
    <string name="title_opcion_2_config">EXPORTAR ASIGNATURA</string>
    <string name="title_opcion_3_config">IMPORTAR ASIGNATURA</string>

    <string name="resumen_estado_aprobado">Has aprobado</string>
    <string name="resumen_estado_no_aprobado">Todavía no has aprobado</string>
    <string name="resumen_estado_reprobado">Has reprobado</string>
    <string name="resumen_promedio_actual">Nota final actual:</string>
    <string name="resumen_condicion_incumplida">No cumples con:</string>
    <string name="resumen_condicion_incumplida_nota">Nota mínima en </string>
    <string name="resumen_condicion_incumplida_promedio">Nota final en </string>
    <string name="resumen_nota_insuficiente">Nota final en </string>
    <string name="resumen_evaluacion_aprobada"> (Ya has aprobado estas evaluaciones)</string>
    <string name="resumen_evaluacion_insuficiente"> (Nota más baja de lo requerido. Causal de reprobación)</string>
    <string name="resumen_evaluacion_riesgo_reprobar"> (En riesgo de reprobar)</string>
    <string name="resumen_evaluacion_riesgo_reprobar_leve"> (En leve riesgo de reprobar)</string>
    <string name="resumen_asignatura_todavia_no_aprobada">Asignatura todavía no aprobada</string>
    <string name="resumen_asignatura_todavia_no_aprobada_condiciones">Asignatura todavía no aprobada debido a condiciones</string>
    <string name="resumen_asignatura_ya_aprobada">Asignatura ya aprobada</string>
    <string name="resumen_asignatura_riesgo_reprobar">Asignatura en riesgo de reprobar</string>
    <string name="resumen_asignatura_riesgo_reprobar_alto">Asignatura en alto riesgo de reprobar</string>
    <string name="resumen_asignatura_imposible_aprobar">Asignatura reprobada (Imposible obtener nota mínima)</string>

    <!-- ERRORES -->
    <string name="e_error">Error</string>
    <string name="e_campo_obligatorio">Campo obligatorio</string>
    <string name="e_formato_incorrecto">Formato incorrecto</string>
    <string name="e_tipo_nota_incorrecta">Tipo de nota incorrecta</string>
    <string name="e_no_minimo">No corresponde al mínimo</string>
    <string name="e_no_rango">No está en el rango</string>
    <string name="e_resumen_no_nota_final">No se ha podido acceder a la nota final</string>
    <string name="e_resumen_no_configuracion">No se ha podido acceder a la configuración de esta asignatura</string>
    <string name="e_resumen_no_asignaturas">No se ha podido acceder a las asignaturas</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="asign1">Bases de Datos Avanzadas</string>
    <string name="asign2">Aplicaciones Móviles</string>
    <string name="asign3">Inteligencia Artificial</string>
    <string name="cancelar_config_inicial">Cancelar</string>
    <string name="btn_exportar_asignatura">Exportar</string>
    <string name="no_asignaturas_export">NO HAY ASIGNATURAS</string>

</resources>